gateway/routing.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: app-routing-admin
  namespace: quikit
spec:
  parentRefs:
  - name: prod-gateway
    namespace: quikit
  hostnames:
  - uatorgadmin.quikit.ai
  rules:
  - matches:
    - path:
        type: PathPrefix
        value: "/"
    filters:
    - type: ExtensionRef
      extensionRef:
        group: gateway.nginx.org
        kind: SnippetsFilter
        name: gateway-timeouts
    backendRefs:
    - name: admin-service
      port: 3002

---
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: app-routing-authn
  namespace: quikit
spec:
  parentRefs:
  - name: prod-gateway
    namespace: quikit
  hostnames:
  - uatauthn.quikit.ai
  rules:
  - matches:
    - path:
        type: PathPrefix
        value: "/"
    filters:
    - type: ExtensionRef
      extensionRef:
        group: gateway.nginx.org
        kind: SnippetsFilter
        name: gateway-timeouts
    backendRefs:
    - name: auth-service
      port: 3001

---
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: app-routing-apps
  namespace: quikit
spec:
  parentRefs:
  - name: prod-gateway
    namespace: quikit
  hostnames:
  - uatapps.quikit.ai
  rules:
  - matches:
    - path:
        type: PathPrefix
        value: "/"
    filters:
    - type: ExtensionRef
      extensionRef:
        group: gateway.nginx.org
        kind: SnippetsFilter
        name: gateway-timeouts
    backendRefs:
    - name: quikit-service
      port: 3000

---
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: app-routing-scale
  namespace: quikit
spec:
  parentRefs:
  - name: prod-gateway
    namespace: quikit
  hostnames:
  - uatscale.quikit.ai
  rules:
  - matches:
    - path:
        type: PathPrefix
        value: "/"
    filters:
    - type: ExtensionRef
      extensionRef:
        group: gateway.nginx.org
        kind: SnippetsFilter
        name: gateway-timeouts
    backendRefs:
    - name: quikscale-service
      port: 3003

---
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: app-routing-track
  namespace: quikit
spec:
  parentRefs:
  - name: prod-gateway
    namespace: quikit
  hostnames:
  - uatprojects.quikit.ai
  rules:
  - matches:
    - path:
        type: PathPrefix
        value: "/"
    filters:
    - type: ExtensionRef
      extensionRef:
        group: gateway.nginx.org
        kind: SnippetsFilter
        name: gateway-timeouts
    backendRefs:
    - name: projects-service
      port: 3004

---
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: app-routing-infra
  namespace: quikit
spec:
  parentRefs:
  - name: prod-gateway
    namespace: quikit
  hostnames:
  - uatinfra.quikit.ai
  rules:
  - matches:
    - path:
        type: PathPrefix
        value: "/"
    filters:
    - type: ExtensionRef
      extensionRef:
        group: gateway.nginx.org
        kind: SnippetsFilter
        name: gateway-timeouts
    backendRefs:
    - name: quikconstruction-service
      port: 3006

---
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: dex-route
  namespace: quikit
spec:
  parentRefs:
  - name: prod-gateway
    namespace: quikit
  hostnames:
  - k8sauth.moreyeahs.in
  rules:
  - filters:
    - type: ExtensionRef
      extensionRef:
        group: gateway.nginx.org
        kind: SnippetsFilter
        name: gateway-timeouts
    backendRefs:
    - name: dex
      port: 5554

---
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: app-routing-crm
  namespace: quikit
spec:
  parentRefs:
  - name: prod-gateway
    namespace: quikit
  hostnames:
  - uatcrm.quikit.ai
  rules:
  - matches:
    - path:
        type: PathPrefix
        value: "/"
    filters:
    - type: ExtensionRef
      extensionRef:
        group: gateway.nginx.org
        kind: SnippetsFilter
        name: gateway-timeouts
    backendRefs:
    - name: crm-service
      port: 3008

---
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: argocd-route
  namespace: argocd
spec:
  parentRefs:
  - name: prod-gateway
    namespace: quikit
  hostnames:
  - uatargocd.moreyeahs.in
  rules:
  - filters:
    - type: ExtensionRef
      extensionRef:
        group: gateway.nginx.org
        kind: SnippetsFilter
        name: gateway-timeouts-argo
    backendRefs:
    - name: argocd-server
      port: 80

---
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: app-routing-hrms
  namespace: quikit
spec:
  parentRefs:
  - name: prod-gateway
    namespace: quikit
  hostnames:
  - uatpeople.quikit.ai
  rules:
  - matches:
    - path:
        type: PathPrefix
        value: "/"
    filters:
    - type: ExtensionRef
      extensionRef:
        group: gateway.nginx.org
        kind: SnippetsFilter
        name: gateway-timeouts
    backendRefs:
    - name: hrms-service
      port: 3009

---
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: app-routing-support
  namespace: quikit
spec:
  parentRefs:
  - name: prod-gateway
    namespace: quikit
  hostnames:
  - uatsupport.quikit.ai
  rules:
  - matches:
    - path:
        type: PathPrefix
        value: "/"
    filters:
    - type: ExtensionRef
      extensionRef:
        group: gateway.nginx.org
        kind: SnippetsFilter
        name: gateway-timeouts
    backendRefs:
    - name: support-service
      port: 3010

---
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: app-routing-asset
  namespace: quikit
spec:
  parentRefs:
  - name: prod-gateway
    namespace: quikit
  hostnames:
  - uatasset.quikit.ai
  rules:
  - matches:
    - path:
        type: PathPrefix
        value: "/"
    filters:
    - type: ExtensionRef
      extensionRef:
        group: gateway.nginx.org
        kind: SnippetsFilter
        name: gateway-timeouts
    backendRefs:
    - name: asset-service
      port: 3012

---
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: app-routing-ai-runtime
  namespace: quikit
spec:
  parentRefs:
  - name: prod-gateway
    namespace: quikit
  hostnames:
  - uataiengine.quikit.ai
  rules:
  - matches:
    - path:
        type: PathPrefix
        value: "/"
    filters:
    - type: ExtensionRef
      extensionRef:
        group: gateway.nginx.org
        kind: SnippetsFilter
        name: gateway-timeouts
    backendRefs:
    - name: ai-runtime-service
      port: 8065

---
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: app-routing-chat
  namespace: quikit
spec:
  parentRefs:
  - name: prod-gateway
    namespace: quikit
  hostnames:
  - uatchat.quikit.ai
  rules:
  - matches:
    - path:
        type: PathPrefix
        value: "/"
    filters:
    - type: ExtensionRef
      extensionRef:
        group: gateway.nginx.org
        kind: SnippetsFilter
        name: gateway-timeouts
    backendRefs:
    - name: chat-service
      port: 3011

---
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: app-routing-socket
  namespace: quikit
spec:
  parentRefs:
  - name: prod-gateway
    namespace: quikit
  hostnames:
  - uatsockets.quikit.ai
  rules:
  - matches:
    - path:
        type: PathPrefix
        value: "/"
    filters:
    - type: ExtensionRef
      extensionRef:
        group: gateway.nginx.org
        kind: SnippetsFilter
        name: gateway-timeouts
    backendRefs:
    - name: socket-service
      port: 9100

---
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: app-routing-lms
  namespace: quikit
spec:
  parentRefs:
  - name: prod-gateway
    namespace: quikit
  hostnames:
  - uatlms.quikit.ai
  rules:
  - matches:
    - path:
        type: PathPrefix
        value: "/"
    filters:
    - type: ExtensionRef
      extensionRef:
        group: gateway.nginx.org
        kind: SnippetsFilter
        name: gateway-timeouts
    backendRefs:
    - name: lms-service
      port: 3016

---
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: app-routing-insights
  namespace: quikit
spec:
  parentRefs:
  - name: prod-gateway
    namespace: quikit
  hostnames:
  - uatinsights.quikit.ai
  rules:
  - matches:
    - path:
        type: PathPrefix
        value: "/"
    filters:
    - type: ExtensionRef
      extensionRef:
        group: gateway.nginx.org
        kind: SnippetsFilter
        name: gateway-timeouts
    backendRefs:
    - name: insights-service
      port: 3015

---
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: app-routing-crmexpress
  namespace: quikit
spec:
  parentRefs:
  - name: prod-gateway
    namespace: quikit
  hostnames:
  - uatcrmexpress.quikit.ai
  rules:
  - matches:
    - path:
        type: PathPrefix
        value: "/"
    filters:
    - type: ExtensionRef
      extensionRef:
        group: gateway.nginx.org
        kind: SnippetsFilter
        name: gateway-timeouts
    backendRefs:
    - name: crmexpress-service
      port: 3017

---
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: app-routing-flow
  namespace: quikit
spec:
  parentRefs:
  - name: prod-gateway
    namespace: quikit
  hostnames:
  - uatflow.quikit.ai
  rules:
  - matches:
    - path:
        type: PathPrefix
        value: "/"
    filters:
    - type: ExtensionRef
      extensionRef:
        group: gateway.nginx.org
        kind: SnippetsFilter
        name: gateway-timeouts
    backendRefs:
    - name: flow-service
      port: 3014
---
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: app-routing-quikfinance
  namespace: quikit
spec:
  parentRefs:
    - name: prod-gateway
      namespace: quikit
  hostnames:
    - uatfinance.quikit.ai
  rules:
    - matches:
        - path:
            type: PathPrefix
            value: "/"
      backendRefs:
        - name: quikfinance-service
          port: 3013

---
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: app-routing-purchase
  namespace: quikit
spec:
  parentRefs:
    - name: prod-gateway
      namespace: quikit
  hostnames:
    - uatpurchase.quikit.ai
  rules:
    - matches:
        - path:
            type: PathPrefix
            value: "/"
      backendRefs:
        - name: purchase-service
          port: 3020


---
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: app-routing-sign
  namespace: quikit
spec:
  parentRefs:
    - name: prod-gateway
      namespace: quikit
  hostnames:
    - uatsign.quikit.ai
  rules:
    - matches:
        - path:
            type: PathPrefix
            value: "/"
      backendRefs:
        - name: sign-service
          port: 3018



---
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: app-routing-attendance
  namespace: quikit
spec:
  parentRefs:
    - name: prod-gateway
      namespace: quikit
  hostnames:
    - uatattendance.quikit.ai
  rules:
    - matches:
        - path:
            type: PathPrefix
            value: "/"
      backendRefs:
        - name: attendance-service
          port: 3022


---
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: app-routing-meet
  namespace: quikit
spec:
  parentRefs:
    - name: prod-gateway
      namespace: quikit
  hostnames:
    - uatmeet.quikit.ai
  rules:
    - matches:
        - path:
            type: PathPrefix
            value: "/"
      backendRefs:
        - name: meet-service
          port: 3023

---
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: app-routing-pdf
  namespace: quikit
spec:
  parentRefs:
    - name: prod-gateway
      namespace: quikit
  hostnames:
    - uatpdf.quikit.ai
  rules:
    - matches:
        - path:
            type: PathPrefix
            value: "/"
      backendRefs:
        - name: pdf-service
          port: 3024

---
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: app-routing-csportal
  namespace: quikit
spec:
  parentRefs:
    - name: prod-gateway
      namespace: quikit
  hostnames:
    - uatcsportal.quikit.ai
  rules:
    - matches:
        - path:
            type: PathPrefix
            value: "/"
      backendRefs:
        - name: csportal-service
          port: 3025 


---
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: app-routing-visionempregistration
  namespace: quikit
spec:
  parentRefs:
    - name: prod-gateway
      namespace: quikit
  hostnames:
    - visionempregistration.quikit.ai
  rules:
    - matches:
        - path:
            type: PathPrefix
            value: "/"
      backendRefs:
        - name: visionempregistration-service
          port: 7010
